# TFM

./: README.md  pyproject.toml
data/: House_1_pre.csv  House_1_pre_real.csv
davidElectric/: __init__.py  modelos_v3.py  server.py
models/: data_aux.csv  metadata.json  models_structure.json
models/horizon_1/: model_Aggregate_day_1.pkl  model_Chest_Freezer_day_1.pkl  model_Computer_Site_day_1.pkl  model_Dishwasher_day_1.pkl  model_Electric_Heater_day_1.pkl  model_Fridge_day_1.pkl  model_Television_Site_day_1.pkl  model_Tumble_Dryer_day_1.pkl  model_Upright_Freezer_day_1.pkl  model_Washing_Machine_day_1.pkl
models/horizon_2/: model_Aggregate_day_2.pkl  model_Chest_Freezer_day_2.pkl  model_Computer_Site_day_2.pkl  model_Dishwasher_day_2.pkl  model_Electric_Heater_day_2.pkl  model_Fridge_day_2.pkl  model_Television_Site_day_2.pkl  model_Tumble_Dryer_day_2.pkl  model_Upright_Freezer_day_2.pkl  model_Washing_Machine_day_2.pkl
models/horizon_3/: model_Aggregate_day_3.pkl  model_Chest_Freezer_day_3.pkl  model_Computer_Site_day_3.pkl  model_Dishwasher_day_3.pkl  model_Electric_Heater_day_3.pkl  model_Fridge_day_3.pkl  model_Television_Site_day_3.pkl  model_Tumble_Dryer_day_3.pkl  model_Upright_Freezer_day_3.pkl  model_Washing_Machine_day_3.pkl
models/horizon_4/: model_Aggregate_day_4.pkl  model_Chest_Freezer_day_4.pkl  model_Computer_Site_day_4.pkl  model_Dishwasher_day_4.pkl  model_Electric_Heater_day_4.pkl  model_Fridge_day_4.pkl  model_Television_Site_day_4.pkl  model_Tumble_Dryer_day_4.pkl  model_Upright_Freezer_day_4.pkl  (+1 more)
shap_outputs/: all_shap_importance.json
(+30 files in other folders)
